[package]#是一个区域标题，表示下方内容是用来配置包的
name = "learn_rust"#项目名称
version = "0.1.0"#项目版本
edition = "2021"#使用的rust版本

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]#另一个区域的开始，它会列出项目的依赖项

[workspace]#工作区
members = ["guessing_number",
"variables","out_and_in",
"function","if_else","Rust_loop",
"reference","slice","rust_struct",
"rust_struct_demo","rust_enum",
"enum_option","rust_match",
"demo_log","rust_use","rust_vector",
"rust_vector_demo","rust_string",
"rust_hash_map","rust_panic",
"rust_result","rust_generics"]